// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DeviceTrust.tsx empty EUB cta 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
}

.c12 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c18 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c22:focus-visible,
.teleport-button__force-focus-visible .c22 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c22:hover,
.teleport-button__force-hover .c22 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c22:active,
.teleport-button__force-active .c22 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c22:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.18);
}

.c11 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin-bottom: 8px;
}

.c16 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: start;
}

.c8 {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c10 {
  display: flex;
  align-items: center;
}

.c19 {
  display: flex;
  align-items: center;
  justify-content: end;
  flex-direction: column;
}

.c3 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
}

.c5 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c1 c3"
  >
    <div
      class="c4 c5"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c0 c6"
  >
    <div
      class="c7 c8"
      width="100%"
    >
      <div
        class="c9 c10 sc-gEvDqW c9 c11"
      >
        <div
          class="c12"
          style="text-align: center;"
        >
          <span
            class="c13 icon icon-laptop"
            color="rgba(255,255,255,0.18)"
          >
            <svg
              fill="currentColor"
              height="150"
              viewBox="0 0 24 24"
              width="150"
            >
              <path
                d="M10.5 7.5C10.0858 7.5 9.75 7.83579 9.75 8.25C9.75 8.66421 10.0858 9 10.5 9H13.5C13.9142 9 14.25 8.66421 14.25 8.25C14.25 7.83579 13.9142 7.5 13.5 7.5H10.5Z"
              />
              <path
                clip-rule="evenodd"
                d="M3 6.75V15.75H2.25C1.83579 15.75 1.5 16.0858 1.5 16.5V18C1.5 18.5967 1.73705 19.169 2.15901 19.591C2.58097 20.0129 3.15326 20.25 3.75 20.25H20.25C20.8467 20.25 21.419 20.0129 21.841 19.591C22.2629 19.169 22.5 18.5967 22.5 18V16.5C22.5 16.0858 22.1642 15.75 21.75 15.75H21V6.75C21 6.15326 20.7629 5.58097 20.341 5.15901C19.919 4.73705 19.3467 4.5 18.75 4.5H5.25C4.65326 4.5 4.08097 4.73705 3.65901 5.15901C3.23705 5.58097 3 6.15326 3 6.75ZM5.25 6C5.05109 6 4.86032 6.07902 4.71967 6.21967C4.57902 6.36032 4.5 6.55109 4.5 6.75V15.75H19.5V6.75C19.5 6.55109 19.421 6.36032 19.2803 6.21967C19.1397 6.07902 18.9489 6 18.75 6H5.25ZM21 17.25V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V17.25H21Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c0"
        >
          <div
            class="c14"
          >
            Register Trusted Device
          </div>
          <div
            class="c15"
          >
            Device Trust enables authenticated device access. Resources protected by the Device Trust mode "required" will enforce the use of a Trusted Device, in addition to establishing the user's identity and enforcing the necessary roles.
          </div>
          <div
            class="c15"
          >
            Trusted Devices can be registered manually using
             
            <a
              class="c16"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
              rel="noreferrer"
              target="_blank"
            >
              tctl client
            </a>
             
            or synced automatically from MDM services like
             
            <a
              class="c16"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
              rel="noreferrer"
              target="_blank"
            >
              Jamf
            </a>
            .
          </div>
          <div
            class="c17"
          >
            Please
             
            <a
              class="c16"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/guides/device-trust/"
              rel="noreferrer"
              target="_blank"
            >
              view our documentation
            </a>
             
            on how to get started with Device Trust.
          </div>
        </div>
      </div>
      <div
        class="c18 c19"
      >
        <div
          class="c20"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c21"
        >
          Want additional devices?
        </div>
        <a
          class="c22"
          fill="filled"
          href="https://goteleport.com/r/upgrade-igs?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c0 c10"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx empty cta 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
}

.c12 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c18 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c22:focus-visible,
.teleport-button__force-focus-visible .c22 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c22:hover,
.teleport-button__force-hover .c22 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c22:active,
.teleport-button__force-active .c22 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c22:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.18);
}

.c11 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin-bottom: 8px;
}

.c16 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: start;
}

.c8 {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c10 {
  display: flex;
  align-items: center;
}

.c19 {
  display: flex;
  align-items: center;
  justify-content: end;
  flex-direction: column;
}

.c3 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
}

.c5 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c1 c3"
  >
    <div
      class="c4 c5"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c0 c6"
  >
    <div
      class="c7 c8"
      width="100%"
    >
      <div
        class="c9 c10 sc-gEvDqW c9 c11"
      >
        <div
          class="c12"
          style="text-align: center;"
        >
          <span
            class="c13 icon icon-laptop"
            color="rgba(255,255,255,0.18)"
          >
            <svg
              fill="currentColor"
              height="150"
              viewBox="0 0 24 24"
              width="150"
            >
              <path
                d="M10.5 7.5C10.0858 7.5 9.75 7.83579 9.75 8.25C9.75 8.66421 10.0858 9 10.5 9H13.5C13.9142 9 14.25 8.66421 14.25 8.25C14.25 7.83579 13.9142 7.5 13.5 7.5H10.5Z"
              />
              <path
                clip-rule="evenodd"
                d="M3 6.75V15.75H2.25C1.83579 15.75 1.5 16.0858 1.5 16.5V18C1.5 18.5967 1.73705 19.169 2.15901 19.591C2.58097 20.0129 3.15326 20.25 3.75 20.25H20.25C20.8467 20.25 21.419 20.0129 21.841 19.591C22.2629 19.169 22.5 18.5967 22.5 18V16.5C22.5 16.0858 22.1642 15.75 21.75 15.75H21V6.75C21 6.15326 20.7629 5.58097 20.341 5.15901C19.919 4.73705 19.3467 4.5 18.75 4.5H5.25C4.65326 4.5 4.08097 4.73705 3.65901 5.15901C3.23705 5.58097 3 6.15326 3 6.75ZM5.25 6C5.05109 6 4.86032 6.07902 4.71967 6.21967C4.57902 6.36032 4.5 6.55109 4.5 6.75V15.75H19.5V6.75C19.5 6.55109 19.421 6.36032 19.2803 6.21967C19.1397 6.07902 18.9489 6 18.75 6H5.25ZM21 17.25V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V17.25H21Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c0"
        >
          <div
            class="c14"
          >
            Register Trusted Device
          </div>
          <div
            class="c15"
          >
            Device Trust enables authenticated device access. Resources protected by the Device Trust mode "required" will enforce the use of a Trusted Device, in addition to establishing the user's identity and enforcing the necessary roles.
          </div>
          <div
            class="c15"
          >
            Trusted Devices can be registered manually using
             
            <a
              class="c16"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
              rel="noreferrer"
              target="_blank"
            >
              tctl client
            </a>
             
            or synced automatically from MDM services like
             
            <a
              class="c16"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
              rel="noreferrer"
              target="_blank"
            >
              Jamf
            </a>
            .
          </div>
          <div
            class="c17"
          >
            Please
             
            <a
              class="c16"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/guides/device-trust/"
              rel="noreferrer"
              target="_blank"
            >
              view our documentation
            </a>
             
            on how to get started with Device Trust.
          </div>
        </div>
      </div>
      <div
        class="c18 c19"
      >
        <div
          class="c20"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c21"
        >
          Want additional devices?
        </div>
        <a
          class="c22"
          fill="filled"
          href="https://goteleport.com/r/upgrade-igs?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c0 c10"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded EUB with IGS (no CTA) 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 40px;
  margin-bottom: 24px;
  width: 100%;
}

.c24 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c16 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
  margin-right: 0;
}

.c18:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c18:not(:disabled):hover,
.c18:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c18:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c21 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
}

.c21:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c21:not(:disabled):hover,
.c21:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c21:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c20 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  font-weight: 500;
}

.c27 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: start;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c3 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
}

.c5 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c22 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c22>thead>tr>th,
.c22>tbody>tr>th,
.c22>tfoot>tr>th,
.c22>thead>tr>td,
.c22>tbody>tr>td,
.c22>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c22>thead>tr>th:first-child,
.c22>tbody>tr>th:first-child,
.c22>tfoot>tr>th:first-child,
.c22>thead>tr>td:first-child,
.c22>tbody>tr>td:first-child,
.c22>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c22>thead>tr>th:last-child,
.c22>tbody>tr>th:last-child,
.c22>tfoot>tr>th:last-child,
.c22>thead>tr>td:last-child,
.c22>tbody>tr>td:last-child,
.c22>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c22>tbody>tr>td {
  vertical-align: middle;
}

.c22>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c22>thead>tr>th svg {
  height: 12px;
}

.c22>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c22 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c22 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c22 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c22 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c8 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 16px 0;
  max-height: 40px;
  margin-top: 4px;
}

.c19 svg {
  font-size: 20px;
}

.c19 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c9 {
  border-radius: 200px;
  width: 100%;
  height: 40px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 14px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c1 c3"
  >
    <div
      class="c4 c5"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c0 c6"
  >
    <div
      class="c7"
      width="100%"
    >
      <nav
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <input
              class="c11"
              placeholder="Search..."
              value=""
            />
            <div
              class="c12"
            >
              <div
                class="c13"
              />
            </div>
          </div>
        </div>
        <div
          class="c14 c15"
          width="100%"
        >
          <div
            class="c16 c1"
          >
            <div
              class="c17"
              font-weight="500"
              style="white-space: nowrap; letter-spacing: 0.15px;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                1
              </strong>
               of
               
              <strong>
                1
              </strong>
            </div>
          </div>
          <div
            class="c0 c1"
          >
            <button
              class="c18 c19"
              disabled=""
              title="Previous page"
            >
              <span
                class="c20 icon icon-circlearrowleft"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="c21 c19"
              disabled=""
              title="Next page"
            >
              <span
                class="c20 icon icon-circlearrowright"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </nav>
      <table
        class="c22"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              OS Type
            </th>
            <th
              style="cursor: default;"
            >
              Asset Tag
            </th>
            <th
              style="cursor: default;"
            >
              Enroll Status
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              align="left"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-apple"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              macOS
            </td>
            <td>
              CSXXXXXXXXX
            </td>
            <td>
              enrolled
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="c24"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c25"
      >
        Register Trusted Device
      </div>
      <div
        class="c26"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c27"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c27"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded EUB without IGS renders CTA 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 40px;
  margin-bottom: 24px;
  width: 100%;
}

.c24 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c30 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c16 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c28 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c28:focus-visible,
.teleport-button__force-focus-visible .c28 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c28:hover,
.teleport-button__force-hover .c28 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c28:active,
.teleport-button__force-active .c28 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c28:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
  margin-right: 0;
}

.c18:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c18:not(:disabled):hover,
.c18:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c18:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c21 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
}

.c21:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c21:not(:disabled):hover,
.c21:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c21:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c20 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin-bottom: 8px;
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.c32 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  font-weight: 500;
}

.c33 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: start;
}

.c25 {
  display: flex;
  align-items: end;
  justify-content: end;
  flex-direction: column;
}

.c29 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c3 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
}

.c5 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c22 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c22>thead>tr>th,
.c22>tbody>tr>th,
.c22>tfoot>tr>th,
.c22>thead>tr>td,
.c22>tbody>tr>td,
.c22>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c22>thead>tr>th:first-child,
.c22>tbody>tr>th:first-child,
.c22>tfoot>tr>th:first-child,
.c22>thead>tr>td:first-child,
.c22>tbody>tr>td:first-child,
.c22>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c22>thead>tr>th:last-child,
.c22>tbody>tr>th:last-child,
.c22>tfoot>tr>th:last-child,
.c22>thead>tr>td:last-child,
.c22>tbody>tr>td:last-child,
.c22>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c22>tbody>tr>td {
  vertical-align: middle;
}

.c22>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c22>thead>tr>th svg {
  height: 12px;
}

.c22>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c22 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c22 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c22 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c22 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c8 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 16px 0;
  max-height: 40px;
  margin-top: 4px;
}

.c19 svg {
  font-size: 20px;
}

.c19 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c9 {
  border-radius: 200px;
  width: 100%;
  height: 40px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 14px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c1 c3"
  >
    <div
      class="c4 c5"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c0 c6"
  >
    <div
      class="c7"
      width="100%"
    >
      <nav
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <input
              class="c11"
              placeholder="Search..."
              value=""
            />
            <div
              class="c12"
            >
              <div
                class="c13"
              />
            </div>
          </div>
        </div>
        <div
          class="c14 c15"
          width="100%"
        >
          <div
            class="c16 c1"
          >
            <div
              class="c17"
              font-weight="500"
              style="white-space: nowrap; letter-spacing: 0.15px;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                1
              </strong>
               of
               
              <strong>
                1
              </strong>
            </div>
          </div>
          <div
            class="c0 c1"
          >
            <button
              class="c18 c19"
              disabled=""
              title="Previous page"
            >
              <span
                class="c20 icon icon-circlearrowleft"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="c21 c19"
              disabled=""
              title="Next page"
            >
              <span
                class="c20 icon icon-circlearrowright"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </nav>
      <table
        class="c22"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              OS Type
            </th>
            <th
              style="cursor: default;"
            >
              Asset Tag
            </th>
            <th
              style="cursor: default;"
            >
              Enroll Status
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              align="left"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-apple"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              macOS
            </td>
            <td>
              CSXXXXXXXXX
            </td>
            <td>
              enrolled
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="c24 c25"
      >
        <div
          class="c26"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c27"
        >
          Want additional devices?
        </div>
        <a
          class="c28"
          fill="filled"
          href="https://goteleport.com/r/upgrade-igs?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c0 c29"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
    <div
      class="c30"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c31"
      >
        Register Trusted Device
      </div>
      <div
        class="c32"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c33"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c33"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded legacy (no CTA) 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 40px;
  margin-bottom: 24px;
  width: 100%;
}

.c24 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c16 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
  margin-right: 0;
}

.c18:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c18:not(:disabled):hover,
.c18:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c18:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c21 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
}

.c21:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c21:not(:disabled):hover,
.c21:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c21:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c20 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  font-weight: 500;
}

.c27 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: start;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c3 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
}

.c5 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c22 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c22>thead>tr>th,
.c22>tbody>tr>th,
.c22>tfoot>tr>th,
.c22>thead>tr>td,
.c22>tbody>tr>td,
.c22>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c22>thead>tr>th:first-child,
.c22>tbody>tr>th:first-child,
.c22>tfoot>tr>th:first-child,
.c22>thead>tr>td:first-child,
.c22>tbody>tr>td:first-child,
.c22>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c22>thead>tr>th:last-child,
.c22>tbody>tr>th:last-child,
.c22>tfoot>tr>th:last-child,
.c22>thead>tr>td:last-child,
.c22>tbody>tr>td:last-child,
.c22>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c22>tbody>tr>td {
  vertical-align: middle;
}

.c22>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c22>thead>tr>th svg {
  height: 12px;
}

.c22>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c22 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c22 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c22 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c22 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c8 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 16px 0;
  max-height: 40px;
  margin-top: 4px;
}

.c19 svg {
  font-size: 20px;
}

.c19 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c9 {
  border-radius: 200px;
  width: 100%;
  height: 40px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 14px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c1 c3"
  >
    <div
      class="c4 c5"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c0 c6"
  >
    <div
      class="c7"
      width="100%"
    >
      <nav
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <input
              class="c11"
              placeholder="Search..."
              value=""
            />
            <div
              class="c12"
            >
              <div
                class="c13"
              />
            </div>
          </div>
        </div>
        <div
          class="c14 c15"
          width="100%"
        >
          <div
            class="c16 c1"
          >
            <div
              class="c17"
              font-weight="500"
              style="white-space: nowrap; letter-spacing: 0.15px;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                1
              </strong>
               of
               
              <strong>
                1
              </strong>
            </div>
          </div>
          <div
            class="c0 c1"
          >
            <button
              class="c18 c19"
              disabled=""
              title="Previous page"
            >
              <span
                class="c20 icon icon-circlearrowleft"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="c21 c19"
              disabled=""
              title="Next page"
            >
              <span
                class="c20 icon icon-circlearrowright"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </nav>
      <table
        class="c22"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              OS Type
            </th>
            <th
              style="cursor: default;"
            >
              Asset Tag
            </th>
            <th
              style="cursor: default;"
            >
              Enroll Status
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              align="left"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-apple"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              macOS
            </td>
            <td>
              CSXXXXXXXXX
            </td>
            <td>
              enrolled
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="c24"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c25"
      >
        Register Trusted Device
      </div>
      <div
        class="c26"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c27"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c27"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;
